añadidas BBDD y comprobadas su funcionamiento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=cineapp
+
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.url=jdbc:h2:mem:cineapp;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+
